HW1, desktop only.

--- a/homework1/style.css
+++ b/homework1/style.css
@@ -18,7 +18,7 @@ a {
 
 .top {
   height: 1024px;
-  background-image: url(./img/top_bgr.jpg);
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 100%), url(./img/top_bgr.jpg) center/cover no-repeat;
   background-repeat: no-repeat;
   background-position: center;
   min-width: 680px;
@@ -51,7 +51,7 @@ a {
   height: 48px;
   flex-shrink: 0;
   border-radius: 30px;
-  background: #eb443f;
+  background: #9c0332;
   color: #fff;
   font-size: 18px;
   font-family: Montserrat;
@@ -60,6 +60,10 @@ a {
   line-height: normal;
   margin-top: 44px;
   margin-left: 120px;
+  transition: background-color 0.3s ease-in;
+}
+.header__button:hover {
+  background: #eb443f;
 }
 
 .game-box {
@@ -77,6 +81,10 @@ a {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  transition: border 0.2s ease-in;
+}
+.game-box__item:hover {
+  border: 3px solid #44d2ff;
 }
 .game-box__item1 {
   background-image: url(./img/game1.png);
