--- a/homework1/style.css
+++ b/homework1/style.css
@@ -17,11 +17,9 @@ a {
 }
 
 .top {
-  height: 1024px;
   background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 100%), url(./img/top_bgr.jpg) center/cover no-repeat;
   background-repeat: no-repeat;
   background-position: center;
-  min-width: 680px;
 }
 
 .header {
@@ -61,17 +59,19 @@ a {
   margin-top: 44px;
   margin-left: 120px;
   transition: background-color 0.3s ease-in;
+  margin-bottom: 493px;
 }
 .header__button:hover {
   background: #eb443f;
 }
 
 .game-box {
-  height: 556px;
   background: #000915;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  padding-top: 128px;
+  padding-bottom: 128px;
 }
 .game-box__item {
   width: 379px;
@@ -103,4 +103,55 @@ a {
   line-height: 32px;
   margin-top: 236px;
   margin-left: 32px;
+}
+
+@media (max-width: 376px) {
+  .center {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .top {
+    width: 375px;
+    min-width: none;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000915 100%), url(./img/mob_top_bgr.png), lightgray -240.259px 0px/294% 100% no-repeat;
+    background-position: center;
+  }
+  .header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    font-size: 32px;
+    width: 343px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+  .header__text {
+    display: flex;
+    width: 343px;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    font-size: 14px;
+    line-height: 22px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+  .header__button {
+    margin-left: 70px;
+    margin-right: 70px;
+    margin-bottom: 239px;
+  }
+  .game-box {
+    flex-direction: column;
+  }
+  .game-box__item {
+    width: 343px;
+    height: 300px;
+    margin: 16px;
+  }
+  .game-box__text {
+    margin-left: 16px;
+    margin-bottom: 32px;
+  }
 }/*# sourceMappingURL=style.css.map */
