--- a/homework1/style.scss
+++ b/homework1/style.scss
@@ -17,14 +17,15 @@ a {
 }
 
 .top {
-  height: 1024px;
+  // height: 1024px;
   // background-image: url(./img/top_bgr.jpg);
-  background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 100%), url(./img/top_bgr.jpg) center/cover no-repeat;
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 100%),
+    url(./img/top_bgr.jpg) center/cover no-repeat;
 
   background-repeat: no-repeat;
   background-position: center;
   // background-size: cover;
-  min-width: 680px;
+  // min-width: 680px;
 }
 
 .header {
@@ -65,6 +66,7 @@ a {
     margin-top: 44px;
     margin-left: 120px;
     transition: background-color 0.3s ease-in;
+    margin-bottom: 493px;
 
     &:hover {
       background: #eb443f;
@@ -74,11 +76,13 @@ a {
 
 .game-box {
   // width: 1440px;
-  height: 556px;
+  // height: 556px;
   background: #000915;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  padding-top: 128px;
+  padding-bottom: 128px;
 
   &__item {
     width: 379px;
@@ -117,3 +121,5 @@ a {
     margin-left: 32px;
   }
 }
+
+@import "mobile";
