--- a/homework3/style.css
+++ b/homework3/style.css
@@ -105,6 +105,96 @@ a {
   margin-left: 32px;
 }
 
+.game {
+  background: #000915;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-top: 243px;
+  padding-bottom: 243px;
+}
+.game-direction2 {
+  flex-direction: row-reverse;
+}
+.game-content {
+  display: flex;
+  width: 584px;
+  padding: 33px 0px 45.007px 0px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+}
+.game-content3 {
+  display: flex;
+  align-items: center;
+  width: 1200px;
+}
+.game-content__title {
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.game-content__text {
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 32px;
+}
+.game-content__button {
+  width: 234.063px;
+  height: 48.603px;
+  border-radius: 30px;
+  background: #9c0332;
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  transition: background-color 0.3s ease-in;
+}
+.game-content__button:hover {
+  background: #eb443f;
+}
+.game-img {
+  display: flex;
+}
+.game-img:hover {
+  border: 3px solid #44d2ff;
+}
+.game-img__1 {
+  background-image: url(./img/game1start.png);
+  width: 485px;
+  height: 333px;
+}
+.game-img__2 {
+  background-image: url(./img/game2start.png);
+  width: 481px;
+  height: 322px;
+}
+
+.footer {
+  display: flex;
+  background: #000915;
+  justify-content: center;
+  border-top: #fff;
+}
+.footer-text {
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding-top: 33px;
+  padding-bottom: 33px;
+}
+
 @media (max-width: 376px) {
   .center {
     padding-left: 0;
@@ -127,7 +217,6 @@ a {
     padding-right: 16px;
   }
   .header__text {
-    display: flex;
     width: 343px;
     flex-direction: column;
     justify-content: center;
